# tauri-aenhance

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
scripts/: generate-screenshots.js
src/: App.vue  main.js  styles.css  utils.js  utils.test.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  lib.rs  models.rs
src/components/: WaveformPlayer.vue
src/i18n/: en.js  index.js  it.js
