[package]
name = "aenhance"
version = "0.1.0"
description = "AEnhance - Audio noise reduction desktop app"
authors = ["Jonathan Lamela"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
anyhow = "1.0"
base64 = "0.22"
hound = "3.5"
nnnoiseless = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
symphonia = { version = "0.5.5", features = ["mp3", "ogg", "vorbis", "wav", "pcm"] }
tauri = { version = "2.11.2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tempfile = "3.16"
